# pm_system

./: .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  docker-compose.yml
service/: .env.example  Dockerfile  pyproject.toml
service/alembic/: env.py
service/alembic/versions/: 130b09d5d131_add_agent_processes_session_id.py  8d9fbcb5086a_story2_add_workspaces_status_change_log.py  b2e0af769c6a_story1_add_goals_themes_phases_tasks_.py  cf77f9900333_story3_add_daily_records_daily_tasks_.py  ee0ced388599_add_weekly_records.py  f55def878cac_add_subtask_templates.py  fc8d8380f559_story4a_add_workspace_progress_agent_.py
service/app/: config.py  main.py
service/app/api/: callback.py  deps.py
service/app/clients/: feishu.py  fileio.py  opencode.py  workspace.py
service/app/core/: __init__.py  audit.py  card_registry.py  cascade.py  exceptions.py  redis_client.py  state_machine.py  task_timeout.py  times.py
service/app/db/: base.py  session.py
service/app/models/: __init__.py  agent_process.py  daily_record.py  daily_task.py  draft.py  goal.py  phase.py  status_change_log.py  subtask.py  subtask_template.py  task.py  theme.py  weekly_record.py  workspace.py  workspace_progress.py
service/app/repositories/: __init__.py  agent_process.py  base.py  daily_record.py  daily_task.py  draft.py  goal.py  phase.py  status_change_log.py  subtask.py  subtask_template.py  task.py  theme.py  weekly_record.py  workspace.py  workspace_progress.py
service/app/schemas/: __init__.py  board.py  common.py  daily.py  draft.py  (+8 more)
service/tests/: _factory.py  conftest.py
(+149 files in other folders)
